// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar component renders a .Bar by default 1`] = `
<div
  className="barPage"
>
  <section
    className="Bar__title"
  >
    <h2 />
    <section
      className="fields"
    >
      <p
        className="address"
      />
      <p
        className="price"
      >
        Price: 
      </p>
      <p
        className="rating"
      >
        Rating: 
      </p>
    </section>
    <button
      className="Bar__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;

exports[`Bar component renders the Bar given props 1`] = `
<div
  className="barPage"
>
  <section
    className="Bar__title"
  >
    <h2>
      test-class-name
    </h2>
    <section
      className="fields"
    >
      <p
        className="address"
      />
      <p
        className="price"
      >
        Price: 
      </p>
      <p
        className="rating"
      >
        Rating: 
      </p>
    </section>
    <button
      className="Bar__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;
